updated html, plots, visual pages files

--- a/data.html
+++ b/data.html
@@ -27,10 +27,10 @@
               <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#!" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="visualizations/temp.html">Max Temperature</a>
-                    <a class="dropdown-item" href="visualizations/humidity.html">Humidity</a>
-                    <a class="dropdown-item" href="visualizations/clouds.html">Cloudiness</a>
-                    <a class="dropdown-item" href="visualizations/wind.html">Wind Speed</a>
+                    <a class="dropdown-item" href="visuals/temperature.html">Max Temperature</a>
+                    <a class="dropdown-item" href="visuals/humidity.html">Humidity</a>
+                    <a class="dropdown-item" href="visuals/cloudiness.html">Cloudiness</a>
+                    <a class="dropdown-item" href="visuals/wind.html">Wind Speed</a>
                   </div>
                 </li>
             <li class="nav-item">
@@ -6907,7 +6907,7 @@
 <!-- Footer -->
 <footer class="py-3 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Humberto Leon 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Leon Fukasawa 2020</p>
     </div>
     <!-- /.container -->
   </footer>
