--- a/index.html
+++ b/index.html
@@ -51,60 +51,60 @@
         <h1 class="display-3">Latitude and Weather </h1>
         <h1 class="display-3">緯度と天気</h1>
         <h1 class="display-3">La Latitud y el Clima</h1>
-        <p class="lead">The objective of this report was to analyze the effects of latitude on weather. We obtained data from the OpenWeatherMap API and built a dataset from over 550 cities with Pandas on jupyter notebook. </p>
+        <p class="lead">The objective of this report was to analyze the effects of latitude on weather. We obtained data from the OpenWeatherMap API and built a dataset from over 550 cities. </p>
         <p class="lead">We analyzed the relationship of latitude vs. temperature, humidity, cloudiness, and wind speed. We plotted visualizations with Matplotlib.  </p>
-        <p class="lead">このレポートの目的は緯度が天気に与える影響を分析することだった。 OpenWeather Map API を使用し、データをとって,　パンダスを使用しジュピターノットブックで５５０害以上のデータセットを作った。 </p>
+        <p class="lead">このレポートの目的は緯度が天気に与える影響を分析することだった。 OpenWeather Map API を使用し、データを入手し, ５５０都市・地区以上のデータセットを作った。 </p>
         <p class="lead">緯度と気温、湿気、曇、風邪のスピードの関係を分析した。MatPlotlibを用い、それぞれの分析結果をプロットした。</p>
-        <p class="lead">El objetivo de este reporte fué analizar los efectos de la latitud en el clima. Recogimos los datos de la OpenWeather Map API , y construimos un dataset de más de 550 ciudades con pandas en jupyter notebook.</p>
-        <p class="lead">Analizamos la relación de la latitud versus la temperatura, humedad, nubosidad y velocidad del viento. 
-          Graficamos las visualizaciones con la libreria Matplotlib.  </p>    
+        <p class="lead">El objetivo de este reporte fué analizar los efectos de la latitud en el clima. Recogimos los datos de la OpenWeather Map API  y construimos un dataset de más de 550 ciudades.</p>
+        <p class="lead">Analizamos la relación de la latitud versus la temperatura, humedad, nubosidad y velocidad del viento. Graficamos las visualizaciones con la libreria Matplotlib.  </p>    
+      
       </header>
-
-
       <!-- Page Features -->
-      <div class="row text-center">
+        <div class="row text-center">
 
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card">
-            <img class="card-img-top" src="/Resources/plots/temperature.png" alt="">
-            <div class="card-body">
-              <h4 class="card-title">vs. Temperature</h4>
-              <a href="visuals/temperature.html" class="btn btn-primary">View</a>
+          <div class="col-lg-3 col-md-6 mb-4">
+            <div class="card">
+              <img class="card-img-top" src="/Resources/plots/temperature.png" alt="">
+                <div class="card-body">
+                  <h4 class="card-title">vs. Temperature</h4>
+                  <a href="visuals/temperature.html" class="btn btn-primary">View</a>
+                </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mb-4">
+            <div class="card">
+              <img class="card-img-top" src="/Resources/plots/humidity.png" alt="">
+              <div class="card-body">
+                <h4 class="card-title">vs. Humidity</h4>
+                <a href="visuals/humidity.html" class="btn btn-primary">View</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mb-4">
+            <div class="card">
+              <img class="card-img-top" src="/Resources/plots/cloudiness.png" alt="">
+              <div class="card-body">
+                <h4 class="card-title">vs. Cloudiness</h4>
+                <a href="visuals/cloudiness.html" class="btn btn-primary">View</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mb-4">
+            <div class="card">
+              <img class="card-img-top" src="/Resources/plots/wind.png" alt="">
+              <div class="card-body">
+                <h4 class="card-title">vs. Wind Speed</h4>
+                <a href="visuals/wind.html" class="btn btn-primary">View</a>
+              </div>
             </div>
           </div>
         </div>
+    
 
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card">
-            <img class="card-img-top" src="/Resources/plots/humidity.png" alt="">
-            <div class="card-body">
-              <h4 class="card-title">vs. Humidity</h4>
-              <a href="visuals/humidity.html" class="btn btn-primary">View</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card">
-            <img class="card-img-top" src="/Resources/plots/cloudiness.png" alt="">
-            <div class="card-body">
-              <h4 class="card-title">vs. Cloudiness</h4>
-              <a href="visuals/cloudiness.html" class="btn btn-primary">View</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card">
-            <img class="card-img-top" src="/Resources/plots/wind.png" alt="">
-            <div class="card-body">
-              <h4 class="card-title">vs. Wind Speed</h4>
-              <a href="visuals/wind.html" class="btn btn-primary">View</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /.row -->
+     <!-- /.row -->
 
     </div>
     <!-- /.container -->
