edited lines content landing page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p class="lead">The objective of this report was to analyze the effects of latitude on weather. We obtained data from the OpenWeatherMap API and built a dataset from over 550 cities. </p>
         <p class="lead">We analyzed the relationship of latitude vs. temperature, humidity, cloudiness, and wind speed. We plotted visualizations with Matplotlib.  </p>
         <p class="lead">このレポートの目的は緯度が天気に与える影響を分析することだった。 OpenWeather Map API を使用し、データを入手し, ５５０都市・地区以上のデータセットを作った。 </p>
-        <p class="lead">緯度と気温、湿気、曇、風邪のスピードの関係を分析した。MatPlotlibを用い、それぞれの分析結果をプロットした。</p>
+        <p class="lead">緯度と気温、湿気、曇、風邪のスピードの関係を分析した。MatPlotlibを用い、それぞれの分析結果をグラフにした。</p>
         <p class="lead">El objetivo de este reporte fué analizar los efectos de la latitud en el clima. Recogimos los datos de la OpenWeather Map API  y construimos un dataset de más de 550 ciudades.</p>
         <p class="lead">Analizamos la relación de la latitud versus la temperatura, humedad, nubosidad y velocidad del viento. Graficamos las visualizaciones con la libreria Matplotlib.  </p>    
       
